--- a/MyMovies.Web/Views/Shared/_Layout.cshtml
+++ b/MyMovies.Web/Views/Shared/_Layout.cshtml
@@ -8,6 +8,7 @@
     @Scripts.Render("~/bundles/modernizr")
     <script src="~/Scripts/angular.js"></script>
     <script src="~/Scripts/angular-cookies.js"></script>
+    @RenderSection("headerstyles", required:false)
 </head>
 
 <body ng-app="MovieApp">
