--- a/MyMovies.Web/Content/my-movie.css
+++ b/MyMovies.Web/Content/my-movie.css
@@ -131,3 +131,7 @@ h1.movie-poster {
 	box-shadow:0 3px 12px rgba(0,0,0, 0.18);
 	-webkit-box-shadow:0 3px 12px rgba(0,0,0, 0.18);
 }
+
+.admin-movie-clear {
+    cursor: pointer;
+}
