--- a/MyMovies.Web/Views/Movie/Detail.cshtml
+++ b/MyMovies.Web/Views/Movie/Detail.cshtml
@@ -80,6 +80,13 @@
                         <li class="share-li">
                             <span>Share Now:</span>
                             <div class="social-icons">
+                                @if (User.Identity.IsAuthenticated && User.IsInRole("Admin"))
+                                {
+                                    <a href='@Url.Action("Index","Admin", new {id = Model.MovieId})' class="social-icon add-tooltip detail-imdb" data-placement="top" title="" data-original-title="MyMovies">
+                                        <i class="fa fa-play-circle"></i>
+                                    </a>
+                                }
+
                                 <a href="javascript:void(0)" class="social-icon icon-facebook add-tooltip" data-placement="top" title="" data-original-title="Facebook">
                                     <i class="fa fa-facebook"></i>
                                 </a>
