--- a/MyMovies.Web/Views/Admin/SearchImdbTitle.cshtml
+++ b/MyMovies.Web/Views/Admin/SearchImdbTitle.cshtml
@@ -22,13 +22,16 @@
 
 
         <div class="row">
-            <div class="col-md-8">
+            <div class="col-md-12">
                 <table class="table table-striped">
                     @foreach (var item in Model)
                     {
                         <tr>
                             <td><img src="@item.Poster"/></td>
-                            <td>@Html.ActionLink(item.Title, "Search" ,"Admin", new { key = item.ImdbId }, null)</td>
+                            <td>
+                                @Html.ActionLink(item.Title, "Search", "Admin", new {key = item.ImdbId}, null)
+                                <a href="http://www.imdb.com/title/@item.ImdbId" target="_blank" class="pull-right">View in IMDB</a>
+                            </td>
                         </tr>
                     }
                 </table>
