--- a/MyMovies.Web/Views/Admin/_MovieForm.cshtml
+++ b/MyMovies.Web/Views/Admin/_MovieForm.cshtml
@@ -92,14 +92,15 @@
         <div class="divider pattern-square"></div>
 
         <div class="row">
-            <div class="col-sm-8">
+            <div class="col-sm-8" id="filedetail">
                 <h2>File Details</h2>
                 <div class="col-sm-6">
                     <label class="input-desc">Date Created</label>
                     @Html.TextBoxFor(model => model.DateCreated, new { @class = "form-control no-radius", placeholder = "Date Created", @readonly = "readonly" })
 
                     <label class="input-desc">Location</label>
-                    @Html.TextBoxFor(model => model.Location, new { @class = "form-control no-radius", placeholder = "Location" })
+                    <a href="javascript:void(0)" class="pull-right" ng-click="setDefaultLocation()">Set as Default</a>
+                    @Html.TextBoxFor(model => model.Location, new { @class = "form-control no-radius", placeholder = "Location", select_on_click = ""})
                 </div>
 
                 <div class="col-sm-6">
@@ -113,21 +114,23 @@
                 </div>
 
                 <div class="col-sm-12">
-                    <div class="col-xs-6">
+                    <div class="col-xs-4">
                         <label class="input-desc" style="vertical-align: central">Remarks</label>
                     </div>
-                    <div class="col-xs-6">
+                    <div class="col-xs-8">
                         <div class="pull-right">
                             <input id="input-id" name="input-name" type="number" class="rating" step="1">
+                            <a href="javascript:void(0)" class="pull-right" ng-click="setDefaultRemarks()">Set as Default</a>
                         </div>
                     </div>
 
                     <div class="input-group">
-                        @Html.TextBoxFor(model => model.Remarks, new { @class = "form-control no-radius", placeholder = "Remarks" })
+                        @Html.TextBoxFor(model => model.Remarks, new { @class = "form-control no-radius", placeholder = "Remarks" ,select_on_click = "" })
                         <div class="input-group-btn">
                             <button type="button" class="btn btn-custom dropdown-toggle" data-toggle="dropdown" aria-expanded="false">Size <span class="caret"></span></button>
                             <ul class="dropdown-menu" role="menu">
                                 <li><a href="javascript:void(0)" ng-click="setMovieQuality('1080p')">1080p</a></li>
+                                <li><a href="javascript:void(0)" ng-click="setMovieQuality('640p')">640p</a></li>
                                 <li><a href="javascript:void(0)" ng-click="setMovieQuality('720p')">720p</a></li>
                                 <li><a href="javascript:void(0)" ng-click="setMovieQuality('480p')">480p</a></li>
                                 <li><a href="javascript:void(0)" ng-click="setMovieQuality('360p')">360p</a></li>
@@ -149,8 +152,15 @@
         <div class="row">
             @Html.HiddenFor(model => model.RelatedMovie)
             @Html.HiddenFor(model => model.Poster)
+            @Html.HiddenFor(model => model.HdPosterLink)
             @Html.HiddenFor(model => model.MovieId, new { ng_model = "movieId" })
             <div class="col-xs-12">
+
+                <div class="alert alert-info fade in alert-dismissable" ng-show="hdImageLoaded">
+                    <a href="#" class="close" data-dismiss="alert" aria-label="close" title="close">×</a>
+                    HD Image has been loaded
+                </div>
+
                 @Html.Partial("_Buttons", Model)
             </div>
         </div>
