--- a/MyMovies.Web/Views/Shared/_Header.cshtml
+++ b/MyMovies.Web/Views/Shared/_Header.cshtml
@@ -7,8 +7,8 @@
         <div class="container">
             @using (Html.BeginForm("Index", "Movie", FormMethod.Get, new { @class = "navbar-form animated fadeInDown" }))
             {
-            <input type="search" id="Search" name="Search" class="form-control" placeholder="Search in here..." value="@ViewBag.Search">
-            <button type="submit" class="btn-circle" title="Search"><i class="fa fa-search"></i></button>
+                <input type="search" id="Search" name="Search" class="form-control" placeholder="Search in here..." value="@ViewBag.Search">
+                <button type="submit" class="btn-circle" title="Search"><i class="fa fa-search"></i></button>
             }
         </div>
     </div>
@@ -71,8 +71,8 @@
                                     <span class="angle"></span>
                                 </a>
                                 <ul class="dropdown-menu" role="menu" aria-labelledby="currency-dropdown">
-                                    <li role="presentation"><a role="menuitem" tabindex="-1"  href="javascript:void(0)" ng-click="setMovieSorting('Asc')">Asc</a></li>
-                                    <li role="presentation"><a role="menuitem" tabindex="-1"  href="javascript:void(0)" ng-click="setMovieSorting('Desc')">Desc</a></li>
+                                    <li role="presentation"><a role="menuitem" tabindex="-1" href="javascript:void(0)" ng-click="setMovieSorting('Asc')">Asc</a></li>
+                                    <li role="presentation"><a role="menuitem" tabindex="-1" href="javascript:void(0)" ng-click="setMovieSorting('Desc')">Desc</a></li>
                                 </ul>
                             </div>
 
@@ -135,32 +135,8 @@
                             </p>
                             <hr>
                             <div class="product clearfix">
-                                <a href="#" class="remove-btn" title="Remove"><i class="fa fa-close"></i></a>
-                                <figure>
-                                    <a href="product.html" title="Product Name"><img class="img-responsive" src="images/products/thumbs/product1.jpg" alt="Product image"></a>
-                                </figure>
-                                <div class="product-meta">
-                                    <h4 class="product-name"><a href="product.html">Seamsun 3d Smart Tv</a></h4>
-                                    <div class="product-quantity">x 2 piece(s)</div><!-- End .product-quantity -->
-                                    <div class="product-price-container">
-                                        <span class="product-price">$80.50</span>
-                                        <span class="product-old-price">$120.50</span>
-                                    </div><!-- End .product-price-container -->
-                                </div><!-- End .product-meta -->
-                            </div><!-- End .product -->
-                            <div class="product clearfix">
-                                <a href="#" class="remove-btn" title="Remove"><i class="fa fa-close"></i></a>
-                                <figure>
-                                    <a href="product.html" title="Product Name"><img class="img-responsive" src="images/products/thumbs/product1.jpg" alt="Product image"></a>
-                                </figure>
-                                <div class="product-meta">
-                                    <h4 class="product-name"><a href="product.html">Banana Smart Watch</a></h4>
-                                    <div class="product-quantity">x 1 piece(s)</div><!-- End .product-quantity -->
-                                    <div class="product-price-container">
-                                        <span class="product-price">$120.99</span>
-                                    </div><!-- End .product-price-container -->
-                                </div><!-- End .product-meta -->
-                            </div><!-- End .product -->
+                                <watch-list ng-repeat="watchList in watchLists"></watch-list>
+                            </div>                            
                             <hr>
                             <div class="cart-action">
                                 <div class="pull-left cart-action-total">
