Generate Random Movies

--- a/MyMovies.Web/Views/Admin/Index.cshtml
+++ b/MyMovies.Web/Views/Admin/Index.cshtml
@@ -132,6 +132,7 @@
                     var hdUrl = returnUrl.data;
                     $('#MoviePoster').attr('src', hdUrl);
                     $('#Poster').val(hdUrl);
+                    $('#UpdateImage').click();
                     $scope.hdImageLoaded = true;
                 }, function () {
 
